# OSFinal-Server_Client

./: .gitignore  Makefile  packages.txt  readme.md
client/: CMakeLists.txt  Makefile  OSClientApplication.c  main.c
client/include/: global.h  isocket.h  param.h
client/socket/: isocket.c  isocket.h
client/src/: app.c  isocket.c  logger.c  main.c  param.c
client/utils/: log.h  param.c  param.h
common/: Makefile
common/include/: global.h  isocket.h  logger.h  thread.h
common/src/: global.c  isocket.c  logger.c  thread.c
server/: CMakeLists.txt  Makefile  OSServerApplication.c  main.c
server/common/: constants.h
server/include/: param.h  thread.h
server/socket/: isocket.c  isocket.h
server/src/: app.c  main.c  param.c  thread.c
server/thread/: thread.c  thread.h
server/utils/: log.c  param.c  param.h
